--- a/src/pages/cronometro/cronometro.module.css
+++ b/src/pages/cronometro/cronometro.module.css
@@ -1,10 +1,10 @@
 .clock {
-  border: 5px solid #806e9e;
-  width: 150px;
-  height: 150px;
+  border: 0.5rem solid #806e9e;
+  width: 15.0rem;
+  height: 15.0rem;
   border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 50px;
+  padding: 5.0rem;
 }
